# bigtrack

./: .gitignore  LICENSE  README.md  bigtrack  env.yml  pyproject.toml  setup.py
.github/workflows/: publish_pypi.yml  python-publish.yml
as/: bigChain.as  bigGenePred.as  bigLink.as  bigMethyl.as  bigRmskAlignBed.as  bigRmskBed.as  sedef.as
bigtrack/: __init__.py  composite_track.py  core.py  genome.py  group.py  hub.py  hub_component.py  multiwig.py  sampled_track.py  settings.py  super_track.py  track.py  trackdb.py
example/: bigbed_test.bed  example.py  example.toml  genome.fasta
scripts/: make_bigChain.sh  make_bigGenePred.sh  mashmap_to_bed.py  rmToTrackHub.pl
src/: abstract_track.py  core.py  genome.py  group.py  hub.py  track.py  track_job.py  utils.py  wrappers.py
track_descriptions/: chain_alignments-other_assemblies.html  chain_alignments-versions.html  cnv-fastcn.html  gene_annotation-curated.html  gene_annotation-ncbi_refseq.html  mappability-genmap.html  methylation-dorado.html  numt.html  rDNA_models.html  sequence_identity-mashmap.html
trackhubs/: generate_T2TMacaqueHub.py  generate_UCSC.py
trackhubs/T2TMacaqueHub/: genomes.txt  hub.txt
trackhubs/T2TMacaqueHub_UCSC/: description.html  genomes.txt  hub.txt
trackhubs/descriptions/: assembly_validation.html  base_percent.html  chain_alignments-other_assemblies.html  chain_alignments-versions.html  cpg_islands.html  gene_annotation-liftoff.html  longdust.html  methylation-dorado_bigmethyl.html  methylation-nanopolish.html  microsatellites.html  newly_resolved_regions.html  numt.html  (+9 more)
(+20 files in other folders)
