[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigtrack"
dynamic = ["version"]
description = "A lightweight Python package for creating UCSC Track Hubs with ease."
readme = "README.md"
requires-python = ">=3.7"

authors = [
    { name = "Shilong Zhang", email = "shilong.zhang@sjtu.edu.cn" }
]

license = { text = "MIT" }
keywords = ["UCSC", "track hub", "genomics", "bioinformatics"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bigtrack"]

[tool.setuptools.dynamic]
version = {attr = "bigtrack.__version__"}
